<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:label="Bienvenido a Appet"
    android:layout_height="match_parent"
    tools:context=".PantallaRegistro"
    android:background="@color/colorFondo">


    <EditText
        android:id="@+id/nombreRegistro"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/nombreRegistro"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoRegistro" />

    <EditText
        android:id="@+id/contraseñaRegistro"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/contraseñaRegistro"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreRegistro" />

    <Button
        android:id="@+id/botonRegistrar"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="108dp"
        android:background="@color/colorAccent"
        android:onClick="Registrar"
        android:text="@string/botonRegistrarse"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseñaRegistro" />

    <EditText
        android:id="@+id/contraseñaRegistro2"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/contraseñaRegistro2"
        android:inputType="textPassword"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseñaRegistro" />

    <EditText
        android:id="@+id/correoRegistro"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/correoRegistro"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>